Complette without effects

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,8 @@
 @import "site-parts/parallax";
 @import "site-parts/principles";
 @import "site-parts/portfolio";
+@import "site-parts/achievements";
+@import "site-parts/mail-list";
 @import "layout/footer";
 
 @include border-box-sizing();
