--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,96 +1,39 @@
 footer{
+  position: relative;
   overflow: hidden;
   text-align: center;
-  .container{
-    padding:0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #0c0c0c;
-    box-shadow: inset 0 0 0 rgba(255, 255, 255, 0.1);
-    h2{
+  background-color: #222;
+  .social-list{
+    margin: 60px auto 25px;
+    text-align: center;
+    li{
       display:inline-block;
-      margin:10px;
-    }
-    .footer-description {
-      position: relative;
-      display:inline-block;
-      margin-top: 10px;
-      padding: 20px;
-      max-width: 440px;
-      text-align: left;
-      &:before{
-        position: absolute;
-        display:block;
-        left: 0;
-        top: 0;
-        width:1px;
-        height:100%;
-        content:"";
-        background-color: #121212;
-        background-image: linear-gradient(to top, #121212 0%, #333 50%, #121212 100%);
-        box-shadow: 0 0 1.4px 1.6px rgba(0, 3, 1, 0.4);
+      margin: 0 12px 12px 0;
+      &:last-child{
+        margin-right: 0;
       }
-      &:after{
-        position: absolute;
-        display:block;
-        right: 0;
-        top: 0;
-        width:1px;
-        height:100%;
-        content:"";
-        background-color: #121212;
-        background-image: linear-gradient(to top, #121212 0%, #333 50%, #121212 100%);
-        box-shadow: 0 0 1.4px 1.6px rgba(0, 3, 1, 0.4);
-      }
-      font-family: Arial;
-      .copyright-articel {
-        margin-bottom: 8px;
-        color: white;
-        font-size: 12px;
-      }
-      .description{
-        margin-bottom: 8px;
-        color: #bfbfbf;
-        font-size: 11px;
-      }
-      span{
-        float: right;
-        color: #484848;
-        font-family: 'Myriad Pro Bold Condensed';
-        font-size: 15px;
-        font-weight: 700;
+      .fa{
+        width: 48px;
+        height: 48px;
+        border: 2px solid white;
+        @include border-radius(50%);
+        padding: 10px;
+        font-size: 24px;
+        color:#fff;
+        transition: 0.5s;
+        &:hover{
+          color:#222;
+          background-color: #fff;
+        }
       }
     }
-    .link-list{
-      max-width: 175px;
-      margin-left: 10px;
-      display:inline-block;
-      li{
-        display:inline-block;
-      }
-      a{
-        display:inline-block;
-        width: 84px;
-        height: 29px;
-        border: 1px solid rgba(255, 255, 255, 0.16);
-      }
-    }
-    .link-top{
-      position: relative;
-      display: inline-block;
-      width:45px;
-      margin: 25px 0 0 10px;
-      color: #494949;
-      font-family: 'Myriad Pro Condensed';
-      font-size: 11px;
-      text-transform: uppercase;
-      text-align: center;
-      img{
-        position: absolute;
-        bottom: 15px;
-        left: 2px;
-      }
+  }
+  .copyright-text{
+    margin-bottom: 60px;
+    font-size: 16px;
+    color: #bbb;
+    span{
+      color: #f7cc4b;
     }
   }
 }
