--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -18,3 +18,6 @@ table                          { border-collapse:collapse; border-spacing:0; }
 a:link, a:visited              { font:14px 'Roboto', sans-serif; color:#4C8BBF; text-decoration:none; }
 a:hover                        { text-decoration:none; }
 
+body{
+  overflow: hidden;
+}
