--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,11 @@ a:hover {
   text-decoration: none;
 }
 
+/* line 21, ../sass/_reset.scss */
+body {
+  overflow: hidden;
+}
+
 /* line 1, ../sass/layout/_header.scss */
 header {
   position: absolute;
